Fixed bug where footer would be off center

--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -22,11 +22,6 @@ header h1 {
 
 footer h1 {
     line-height: 3vh;
-    height: 100%;
-    position: relative;
-    top: 25%;
-    padding-top: 0;
-    margin-top: 0;
 }
 
 footer {
